--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: #ecf7fd;
+}
 .main .bg{
     position: absolute;
     top: 0;
@@ -13,7 +16,7 @@
 }
 
 .home{
-    margin: 8.54vh 0 0;
+    margin: 8.54vh 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,7 +48,7 @@
     font-weight: 800;
     font-size: 1.1vw;
     line-height: 175.7%;
-    margin-left: 145px; /*harcoded the alignment for now, will need to be fixed after the actual logo is placed*/
+    margin-left: 120px; /*harcoded the alignment for now, will need to be fixed after the actual logo is placed*/
     color: #163247;
     justify-items: center;
     align-items: center;
@@ -73,8 +76,9 @@
 
 .head_text{
     /* FONT FAMILY STORYBOOK NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
+    font-family: 'Storybook';
     font-style: normal;
-    font-weight: 900;
+    font-weight: 500;
     font-size: 17vh;
     line-height: 163.15%;
     text-align: center;
@@ -155,3 +159,49 @@
     color: #163247;
     /* border: 1px solid #163247; */
 }
+
+.subheadtext{
+    /* position: absolute; */
+    
+    font-family: 'Storybook';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 8vh;
+    line-height: 75px;
+    text-align: center;
+    color: #163247;
+    margin-top: 6vh;
+}
+.destination{
+    display: flex;
+}
+
+.card_frame{
+    display: flex;
+}
+
+.card{
+    margin: 50px 25px;
+    border-radius: 12px;
+    padding: 25px 25px;
+    width: fit-content;
+    background-color: #B4DCFA;
+    text-align: center;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.3);
+}
+
+.card .loc{
+    /* font-family: 'Gilroy'; */
+    margin: 15px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.25em;
+
+    color: #163247;
+
+
+}
+
+
