--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 body{
     background-color: #ecf7fd;
+    overflow-x: hidden;
 }
 .main .bg{
     position: absolute;
@@ -78,33 +79,27 @@ body{
     /* FONT FAMILY STORYBOOK NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
     font-family: 'Storybook';
     font-style: normal;
-    font-weight: 500;
-    font-size: 17vh;
     line-height: 163.15%;
     text-align: center;
     color: #163247;
-    margin-top: -30px;
-    margin-bottom: -10px;
 }
 
 .sub_text{
     /* FONT FAMILY GILROY NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
     font-style: normal;
-    font-weight: 300;
-    font-size: 6.2vh;
-    line-height: 8.26vh;
     text-align: center;
     color: #163247;
+    margin: -30px 0 0 0;
 }
 
 .desc{
     /* FONT FAMILY GILROY NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
-    width: 48vw;
-    height: 90px;
+    /* width: 48vw; */
+    /* height: 90px; */
     font-style: normal;
-    font-weight: 300;
-    font-size: 2.6vh;
-    line-height: 142.15%;
+    /* font-weight: 300; */
+    /* font-size: 2.6vh; */
+    /* line-height: 142.15%; */
     margin: 2vh 0;
     text-align: center;
     color: #163247;
