--- a/app/globals.css
+++ b/app/globals.css
@@ -94,31 +94,25 @@ body{
 
 .desc{
     /* FONT FAMILY GILROY NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
-    /* width: 48vw; */
-    /* height: 90px; */
     font-style: normal;
-    /* font-weight: 300; */
-    /* font-size: 2.6vh; */
-    /* line-height: 142.15%; */
     margin: 2vh 0;
     text-align: center;
     color: #163247;
 }
 .search{
     display: flex;
-    margin: 10vh 0;
+    margin: 10vh 0 0 0;
 }
 .searchdest input{
     background-color: white;
     border: 2px solid #163247;
     color: #163247;
-    border-radius: 2px;
-    width: 25vw;
-    padding: 0.8vh 0.8vw;
+    border-radius: 5px;
+    padding: 0.8vh 1.2vw;
     font-weight: 700;
     outline: none;
     /* FONT FAMILY GILROY NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
-}
+} 
 /*.searchdest span{
     position: absolute;
     left: 435px;
@@ -148,6 +142,7 @@ body{
     font-size: 2vh;
     padding: 0.7vh 1.7vw;
     transition: 0.5s;
+    height: 2.5rem;
 }
 .searchdestbtn:hover{
     background-color: #B4DCFA;
